# drift-dyndexer

./: Cargo.toml  init.sql  postgres-config.json  postgres_writer_config.json
src/: drift.json  lib.rs
